# lydbro-hass

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  LICENSE  README.md  TODO.md  deploy.sh  hacs.json  info.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  validate.yml
blueprints/: beoremote_media_player.yaml
custom_components/lydbro/: __init__.py  binary_sensor.py  button.py  client.py  config_flow.py  const.py  coordinator.py  device_trigger.py  diagnostics.py  entity.py  event.py  icons.json  manifest.json  remote.py  repairs.py  sensor.py  services.py  services.yaml  strings.json
custom_components/lydbro/brand/: README.md
custom_components/lydbro/translations/: en.json
docs/: MIGRATING_FROM_MQTT.md  native_tcp_protocol.md
examples/: automation-beoremote-control.yaml
tests/: __init__.py  conftest.py  fake_server.py  test_client.py  test_config_flow.py  test_coordinator.py  test_device_trigger.py  test_diagnostics.py  test_event.py  test_init.py  test_remote.py  test_repairs.py  test_sensor.py  test_services.py
